--- a/index.css
+++ b/index.css
@@ -147,6 +147,7 @@ body {
 
 
 
+
 /* Media Queries para móviles */
 @media (max-width: 720px) {
 
@@ -164,7 +165,8 @@ body {
     }
 
     .btn-submit {
-        padding: 10px;
+
+        padding: 10px 20px;
         font-size: 0.9em;
     }
 
