--- a/index.css
+++ b/index.css
@@ -9,6 +9,24 @@
     box-sizing: border-box;
 }
 
+
+/* Asegúrate de que la clase .fade-in esté definida con una animación */
+.fade-in {
+  opacity: 0; /* Inicia invisible */
+  animation: fadeInEffect 2s forwards; /* Aplica la animación fadeInEffect en 2 segundos */
+}
+
+/* Define la animación de desvanecimiento */
+@keyframes fadeInEffect {
+  from {
+    opacity: 0; /* Comienza invisible */
+  }
+  to {
+    opacity: 1; /* Termina completamente visible */
+  }
+}
+
+
 body {
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
