--- a/index.css
+++ b/index.css
@@ -49,6 +49,7 @@ body {
     width: 100%;
     max-width: 400px;
     text-align: center;
+      box-sizing: border-box;
 }
 
 /* Títulos */
@@ -88,16 +89,6 @@ body {
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
 
-
-
-/* Estilo para el textarea para evitar desbordamientos */
-
-textarea {
-  resize: none; /* Desactiva el cambio de tamaño */
-  overflow: auto; /* Permite que el contenido tenga scroll si excede el tamaño */
-  max-width: 100%; /* Limita el ancho máximo al tamaño del contenedor */
-  box-sizing: border-box; /* Asegura que padding y border estén incluidos en el tamaño */
-}
 
 
 
