--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ body {
     width: 100%;
     max-width: 400px;
     text-align: center;
-      box-sizing: border-box;
+     
 }
 
 /* Títulos */
@@ -80,6 +80,10 @@ body {
     border-radius: 5px;
     font-size: 1em;
     color: #333;
+    resize: vertical; /* Permitir solo redimensionamiento vertical */
+    max-width: 100%; /* Limitar el ancho máximo al del contenedor */
+    overflow: auto; /* Mostrar scroll si el contenido supera el espacio */
+    box-sizing: border-box; /* Incluir padding y bordes en el tamaño total */
 }
 
 .form-container input:focus,
